--- a/spark_service/Dockerfile
+++ b/spark_service/Dockerfile
@@ -1,15 +1,9 @@
 # Pull base image
-FROM amazoncorretto:8
+FROM amazoncorretto:11
 
-RUN yum -y update
-RUN yum -y install yum-utils
-RUN yum -y groupinstall development
+RUN yum -y update && yum -y install yum-utils && yum -y groupinstall development && yum -y install initscripts
 
-RUN yum list python3*
-RUN yum -y install python3 python3-dev python3-pip python3-virtualenv
-
-RUN python -V
-RUN python3 -V
+RUN yum -y install python3 python3-dev python3-pip
 
 ENV PYSPARK_DRIVER_PYTHON python3
 ENV PYSPARK_PYTHON python3
@@ -18,10 +12,6 @@ ENV PYSPARK_PYTHON python3
 WORKDIR /spark_job
 
 COPY ./spark_job/ .
-COPY ./script_check.sh .
 
 # Preparation
-RUN pip3 install pyspark && chmod 755 script_check.sh
-
-# App execution
-ENTRYPOINT ["spark-submit", "/spark_job/weather_job.py", "file:///data/raw", "file:///data/trusted"]
+RUN pip3 install pyspark && chmod -R 755 ./*.sh
